# beckon

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/beckon-core/: Cargo.toml
crates/beckon-core/src/: calc.rs  clipstore.rs  config.rs  devutil.rs  emoji.rs  frecency.rs  fuzzy.rs  lib.rs  pathintent.rs  persist.rs  quicklinks.rs  router.rs  rpc.rs  snippets.rs
crates/beckon-macos/: Cargo.toml
crates/beckon-macos/src/: apps.rs  ax.rs  engine.rs  ffi.rs  files.rs  hotkey.rs  main.rs  menubar.rs  onboarding.rs  panel.rs  paste.rs  pasteboard.rs  pathnav.rs  plugins.rs  scriptcmd.rs  switcher.rs  system.rs  theme.rs  ui.rs  walkthrough.rs  winmgmt.rs
docs/: PLAN.md  PLUGINS.md  index.html
docs/plugins/: example-plugin.py
scripts/: bundle.sh  install.sh  verify.sh
